Hero Z-Index fixed

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -29,7 +29,6 @@ html {
     font-family: 'Circular Std';
     font-weight: 900;
     font-style: normal;
-    z-index: 100;
     position: relative;
 }
 
@@ -48,7 +47,6 @@ html {
 
 .landing-section {
     padding: 0;
-    /* background-image: url("../pics/Art.jpg"); */
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
